# DSG_DS_Project

./: .gitignore  .nojekyll  1_projektcharta.html  3_modellierungsbericht.html  4_evaluationsbericht.html  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
site/: .gitignore  1_projektcharta.ipynb  3_modellierungsbericht.ipynb  4_evaluationsbericht.ipynb  _quarto.yml  index.qmd  plotly-dark-mode.html
