[project]
name = "song-popularity-predictor"
version = "1.0.0"
description = "Project to predict the popularity of a song"
readme = "README.md"
requires-python = "~=3.14"
authors = [
    { name = "Christian Bosshard", email = "boschr02@students.zhaw.ch" },
    { name = "Enea Fedel", email = "fedelene@students.zhaw.ch" },
    { name = "Gopigan Villavarayasingam", email = "villagop@students.zhaw.ch" },
]
dependencies = [
    "tqdm~=4.67",
    "torch~=2.9",
    "orjson~=3.11",
    "pandas~=2.3",
    "plotly~=6.5",
    "ipython~=9.8",
    "xgboost~=3.1",
    "requests~=2.32",
    "matplotlib~=3.10",
    "scikit-learn~=1.8",
    "python-dotenv~=1.2",
    "sentence-transformers~=5.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "T201", "PLR2004", "S113"]
